todo-manifest/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment 
  namespace: three-tier
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: backend
        image: shubhamshinde2025/threebackend:v12
        ports:
        - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: three-tier
spec:
  selector:
    app: api
  type: ClusterIP
  ports:
    - port: 5000
      protocol: TCP
