todo-manifest/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment 
  namespace: three-tier
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: shubhamshinde2025/threefrontend:v13
        ports:
        - containerPort: 3000


---

apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: three-tier
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
